[project]
name = "s3-uploader"
version = "0.1.0"
description = ""
authors = [
    {name = "Rahman"}
]
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "boto3 (>=1.40.35,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]
[tool.poetry]
name = "flask-s3-uploader"
version = "0.1.0"
description = ""
authors = ["rahmanhasri <rahman.hasri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.22"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
